<resources>
    <string name="app_name">My Code Space</string>

    <!-- Intro slide title and description -->
    <string name="slide_1_desc">Please take the time to submit a comment on your experience. This will help me create better apps in future!</string>
    <string name="logo_main">Main Logo</string>

    <!-- preferences -->
    <string name="my_preferences">"co.za.bogote.MyPref"</string>
    <string name="my_preferences_key">"co.za.bogote.MyPrefKey"</string>
    <string name="img_content_description">Idea Crown</string>
    <string name="keep_calm">KEEP CALM</string>

    <!-- Slide 2 Strings -->
    <string name="visitors_name">Visitors Name:</string>
    <string name="username">Enter Your Name</string>
    <string name="button_skip">SKIP</string>
    <string name="button_next">NEXT</string>
    <string name="button_start">START</string>

    <!-- Facebook Login Strings -->
    <string name="facebook_app_id">586072848534824</string>
    <string name="fb_login_protocol_scheme">fb586072848534824</string>

    <!-- Main Activity Strings -->
    <string name="student_name">Opatile Kelobang</string>
    <string name="code_space">Code Space</string>
    <string name="main_btn_next">NEXT</string>

    <!-- Main Menu strings -->
    <string name="main_menu_welcome">MAIN MENU</string>
    <string name="Welcome_code_space">Welcome to my Code Space</string>
    <string name="home_button">Intro Screen</string>
    <string name="calc_button">Calculation</string>
    <string name="about_me_button">About Me</string>
    <string name="dev_profile_button">My Dev Profile</string>
    <string name="feedback">Feedback</string>
    <string name="gallery">Gallery</string>


    <!-- Calculation activity strings-->
    <string name="calculation_text">TRAPEZOID AREA CALCULATOR</string>
    <string name="trapezoid_des">Trapezoid Equation</string>
    <string name="height">height</string>
    <string name="base1">base 1</string>
    <string name="base2">base 2</string>
    <string name="calculate">Calculate Area</string>
    <string name="answer">Area of the Trapezoid is: </string>
    <string name="clear">Reset View</string>


    <!-- About Me Strings -->
    <string name="about_me_header">ABOUT ME</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="my_intro">My name is Opatile. I like all things Tech, and I am learning to create Android Apps. So far so good, because I\'m not dead yet.</string>
    <string name="skills">I have many skills in many things, but I\'m always on a learning path. A wise man once said, \"a jack of all trades is a master of none\"!</string>
    <string name="hobbies">My favorite pastime is photography. If I\'m not doing that, I\'m probably watching football or playing Call of Duty.</string>
    <string name="future">In future, I would like to make a real difference in my community. I have lots of ideas floating around in my head, but as of now, I\'ve set myself short term goals, the first of which is to graduate. After that, the sky is the limit.</string>
    <string name="team">From what I\'ve heard, I\'m not a fun person to work with in a team. I suppose that\'s because my greatest quality can also be my worst. I take things too seriously. I\'m learning to smile a bit more nowadays, but generally I\'m a happy chap. I just live in my own head.</string>
    <string name="more_info">I come from a small village, and spent most of my teen years in boarding school. I suppose that\s why I\'m independent. It wasn\'t always easy, being on my own, but I learned some valuable lessons about myself.  </string>
    <string name="other_stuff">As a student in 2018, I\'ve also learned to schedule, and handle many different tasks at once. This has helped me a lot in the classroom, where I engage with many different personalities on a daily.</string>
    <string name="sign_off">To sign off this long history lesson of myself, here\'s a piece of unsolicited advice: \"Be kind to others, even those whom you don\'t always agree with. Its very easy to forget that we are not perfect. One day it could be you who owes someone an apology\"</string>
    <string name="random_image">Daryl and Lyndsay</string>
    <string name="last_bit">Because I don\'t know how to make an image gallery in android, yet, here\'s a random photo I took of a couple on their wedding day. I did say my favorite pastime was photography right?</string>

    <!-- Dev Profile strings -->
    <string name="dev_profile_title">MY DEV DETAILS</string>
    <string name="back_btn">MAIN MENU</string>
    <string name="my_details">MY DETAILS</string>
    <string name="dev_name">Opatile Kelobang</string>
    <string name="dev_contact">081 326 0808</string>
    <string name="dev_email">opatile@live.com</string>
    <string name="dev_twitter">blackcarpet_za</string>
    <string name="dev_instagram">blackcarpet_za</string>
    <string name="dev_user">User Icon</string>



</resources>
