<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSlide1">

    <ImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="184dp"
        android:contentDescription="@string/img_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/crown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/slide_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="34dp"
        android:gravity="center_horizontal"
        android:text="@string/keep_calm"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/img"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:gravity="center_horizontal"
        android:text="@string/slide_1_desc"
        android:textColor="@android:color/white"
        android:id="@+id/slide_desc"
        android:textSize="20sp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintTop_toBottomOf="@+id/slide_title"
        tools:layout_editor_absoluteX="0dp" />


</android.support.constraint.ConstraintLayout>