<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019.
  ~ Opatile Kelobang
  ~ http://www.bogote.co.za
  ~ Android App Development
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculationActivity"
    android:background="@drawable/ui_background_with_dark_block"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">


    <android.support.v7.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/top_back_button"
        android:contentDescription="@string/back_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toTopOf="@+id/myToolbar"
        app:layout_constraintEnd_toStartOf="@+id/myToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/arrow_back_white_24dp"
        android:onClick="goToMainScreen"
        />

    <TextView
        android:id="@+id/calculation_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="97dp"
        android:text="@string/calculation_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar" />

    <!--<ImageView
        android:id="@+id/image_equation"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="528dp"
        android:contentDescription="@string/trapezoid_des"
        android:gravity="center"
        android:background="@drawable/rectangle_white"
        android:src="@drawable/trapezoid_equation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculation_header"
        />-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="435dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculation_header">

        <EditText
            android:id="@+id/input_base1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:ems="10"
            android:layout_margin="5dp"
            android:hint="@string/base1"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:background="@drawable/edittext_bg"
            android:textColorHint="#757575"
            android:textAlignment="center"
            tools:ignore="Autofill"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/input_base2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/base2"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textAlignment="center"
            android:background="@drawable/edittext_bg"
            tools:ignore="Autofill"
            android:textColorHint="#757575"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/input_height"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/height"
            android:textColorHint="#757575"
            android:inputType="number"
            android:background="@drawable/edittext_bg"
            android:textAlignment="center"
            tools:ignore="Autofill"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button_add"
            android:background="@drawable/button_main_green"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:text="@string/calculate" />

        <Button
            android:id="@+id/clear_btn"
            android:background="@drawable/button_main_green"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:text="@string/clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/answer_field"
        android:layout_width="399dp"
        android:layout_height="80dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:textSize="18sp"
        android:background="@drawable/answer_field"
        android:text="@string/answer"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</android.support.constraint.ConstraintLayout>