<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019.
  ~ Opatile Kelobang
  ~ http://www.bogote.co.za
  ~ Android App Development
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DevProfile"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">


    <android.support.v7.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/top_back_button"
        android:contentDescription="@string/back_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toTopOf="@+id/myToolbar"
        app:layout_constraintEnd_toStartOf="@+id/myToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:onClick="goToMainScreen"
        />

    <TextView
        android:id="@+id/dev_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/my_details"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar"
        android:textAlignment="center"
         />

    <LinearLayout
        android:id="@+id/dev_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="490dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dev_title">

        <ImageButton
            android:id="@+id/dev_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:contentDescription="@string/dev_user"
            android:src="@drawable/user_shape_24px"
            android:background="#00000000"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/dev_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/dev_name"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dev_layout_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="490dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dev_layout_name">

        <ImageButton
            android:id="@+id/dev_contact_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:contentDescription="@string/dev_user"
            android:src="@drawable/mobile_phone_24px"
            android:background="#00000000"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/dev_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/dev_contact"
            android:layout_gravity="center"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>